# derpy

./: .gitignore  Cargo.toml  README.md
src/: acquire.rs  arg_utils.rs  consts.rs  dependency.rs  derpyfile.rs  error.rs  log.rs  main.rs  path_utils.rs  vcs.rs
src/cmds/: acquire.rs  add.rs  init.rs  mod.rs  upgrade.rs
vcs_info/: git.json  svn.json
